# monitoring_server

./: .gitignore  CMakeLists.txt  README.md  config.txt  doc.md
include/: client.h  logger.h  main.h  rw_utils.h  serverConfig.h
src/: client.c  logger.c  main.c  rw_utils.c  serverConfig.c
